tdf#119094 fix area tabpage pattern preview reversed colors

Change-Id: I9df51a36deabe684127508a3c9b52054756df5a6